begin writing server matching code

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server/index.js",
   "dependencies": {
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "express-ws": "^3.0.0"
   },
   "devDependencies": {},
