--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "express-ws": "^3.0.0"
+    "express-ws": "^3.0.0",
+    "rand-token": "^0.4.0"
   },
   "devDependencies": {},
   "scripts": {
