--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "server/index.js",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "express-ws": "^3.0.0",
+    "pug": "^2.0.0-rc.4",
     "rand-token": "^0.4.0"
   },
   "devDependencies": {},
